# serializer version: 1
# name: test_entities[K10+ Pro Combo Vacuum][vacuum.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'supported_features': <VacuumEntityFeature: 12368>,
    'translation_key': 'vacuum',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[K10+ Pro Combo Vacuum][vacuum.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'battery_icon': 'mdi:battery-60',
      'battery_level': 56,
      'friendly_name': 'test-name',
      'last_run_success': None,
      'supported_features': <VacuumEntityFeature: 12368>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_entities[K10+ Pro Vacuum][vacuum.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'supported_features': <VacuumEntityFeature: 12368>,
    'translation_key': 'vacuum',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[K10+ Pro Vacuum][vacuum.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'battery_icon': 'mdi:battery',
      'battery_level': 100,
      'friendly_name': 'test-name',
      'last_run_success': None,
      'supported_features': <VacuumEntityFeature: 12368>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cleaning',
  })
# ---
# name: test_entities[K10+ Vacuum][vacuum.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'supported_features': <VacuumEntityFeature: 12368>,
    'translation_key': 'vacuum',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[K10+ Vacuum][vacuum.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'battery_icon': 'mdi:battery',
      'battery_level': 100,
      'friendly_name': 'test-name',
      'last_run_success': None,
      'supported_features': <VacuumEntityFeature: 12368>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cleaning',
  })
# ---
# name: test_entities[K20 Vacuum][vacuum.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'supported_features': <VacuumEntityFeature: 12368>,
    'translation_key': 'vacuum',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[K20 Vacuum][vacuum.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'battery_icon': 'mdi:battery',
      'battery_level': 100,
      'friendly_name': 'test-name',
      'last_run_success': None,
      'supported_features': <VacuumEntityFeature: 12368>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'returning',
  })
# ---
# name: test_entities[S10 Vacuum][vacuum.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'supported_features': <VacuumEntityFeature: 12368>,
    'translation_key': 'vacuum',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[S10 Vacuum][vacuum.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'battery_icon': 'mdi:battery-charging-80',
      'battery_level': 77,
      'friendly_name': 'test-name',
      'last_run_success': None,
      'supported_features': <VacuumEntityFeature: 12368>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
